--- a/stayle.css
+++ b/stayle.css
@@ -2,6 +2,9 @@ p {
     text-align: center;
     background: #CCCCCC
     }
-    h1 {
-        background: #ffee00
+h1 {
+        background: #cccccc
+        }
+    body {
+        background: #cccccc
     }
