--- a/style.css
+++ b/style.css
@@ -1,10 +1,17 @@
+body {
+    background: #cccccc;
+}
+
+h1 {
+    text-aling: center;
+    }
+
 p {
     text-align: center;
     background: #CCCCCC
+}
+
+em strong {
+    color: red;
     }
-h1 {
-        background: #cccccc
-        }
-    body {
-        background: #cccccc
-    }
+    
